# orteaf

./: .gitignore  Agent.md  CMakeLists.txt  CONTRIBUTING.md  README.md
orteaf/: CMakeLists.txt
orteaf/include/orteaf/extension/ops/: copy_host_to_mps.h  copy_mps_to_host.h  fill.h  print.h  tensor_ops.h
orteaf/include/orteaf/extension/tensor/: dense_tensor_impl.h
orteaf/include/orteaf/internal/architecture/: architecture.h  cpu_detect.h  cuda_detect.h  mps_detect.h
orteaf/include/orteaf/internal/backend/: backend.h  backend_traits.h
orteaf/include/orteaf/internal/base/: array_view.h  checked_int.h  handle.h  heap_vector.h  lease.h  lru_list.h  math_utils.h  shared_lease.h  small_vector.h  strong_id.h
orteaf/include/orteaf/internal/device/: device.h
orteaf/include/orteaf/internal/dtype/: dtype.h  float16.h  float8.h
orteaf/include/orteaf/internal/error/: exception.hpp
orteaf/include/orteaf/internal/ops/: ops.h
orteaf/src/extension/ops/: copy_host_to_mps.cpp  copy_mps_to_host.cpp  fill.cpp  op_common.h  print.cpp  tensor_ops.cpp  transfer_common.h
orteaf/src/extension/tensor/: dense_tensor_impl.cpp
orteaf/src/internal/: placeholder.cpp
orteaf/src/internal/architecture/: cpu_detect.cpp  cuda_detect.cpp  cuda_detect.cu  mps_detect.cpp
orteaf/src/internal/execution/: README.md
orteaf/src/internal/init/: library_init.cpp
orteaf/src/user/execution_context/: cpu_context_guard.cpp  cuda_context_guard.cu  mps_context_guard.cpp
orteaf/src/user/tensor/: tensor.cpp
tests/: CMakeLists.txt
tests/extension/kernel/common/: layout_common_test.cpp
tests/extension/kernel/cpu/: fill_test.cpp  print_test.cpp
tests/extension/ops/: copy_mps_transfer_test.mm  fill_mps_test.mm  fill_test.cpp  print_test.cpp
tests/extension/ops/dense/: copy_cuda_transfer_test.cu  copy_mps_transfer_test.mm  dense_tensor_ops_test.cpp  fill_cuda_test.cu  fill_mps_test.mm  fill_test.cpp  print_test.cpp
tests/extension/tensor/layout/: dense_tensor_layout_test.cpp
tests/internal/architecture/: architecture_test.cpp  cpu_detect_test.cpp  cuda_detect_test.cpp  cuda_detect_test.cu  mps_detect_test.cpp  mps_detect_test.mm
tests/internal/backend/: backend_tables_test.cpp
tests/internal/backend/cpu/: cpu_alloc_test.cpp  cpu_resource_test.cpp  cpu_stats_test.cpp
tests/internal/backend/cuda/: cuda_alloc_copy_test.cu  cuda_alloc_test.cu  cuda_check_error_test.cpp  cuda_check_error_test.cu  cuda_context_stream_event_test.cpp  cuda_context_stream_event_test.cu  cuda_context_test.cu  cuda_device_test.cu  cuda_event_test.cu  cuda_graph_test.cu  cuda_init_test.cu  cuda_kernel_embed_test.cu  cuda_module_function_test.cu  cuda_stats_test.cu  cuda_stream_test.cu
tests/internal/backend/mps/: metal_kernel_embed_test.mm  mps_buffer_test.mm  mps_command_queue_buffer_test.mm  mps_device_test.mm  mps_encoder_test.mm  mps_event_test.mm  mps_fence_test.mm  mps_fence_ticket_test.mm  mps_heap_test.mm  mps_library_function_pipeline_test.mm  mps_stats_test.mm  mps_texture_test.mm  mps_ticket_test.mm
tests/internal/base/: handle_test.cpp  heap_vector_test.cpp  lru_list_test.cpp  math_utils_test.cpp  small_vector_test.cpp
tests/internal/base/lease/: strong_weak_lease_test.cpp
tests/internal/base/manager/: pool_manager_test.cpp
tests/internal/base/pool/: fixed_slot_store_test.cpp  slot_pool_test.cpp  with_control_block_binding_test.cpp
tests/internal/device/: device_tables_test.cpp
tests/internal/diagnostics/error/: error_result_test.cpp  testing-strategy.md
tests/internal/diagnostics/log/: log_test.cpp
tests/internal/dtype/: dtype_test.cpp
tests/internal/execution/: execution_tables_test.cpp
tests/internal/execution_context/cpu/: current_context_test.cpp
tests/internal/execution_context/cuda/: current_context_test.cpp
tests/internal/execution_context/mps/: current_context_test.mm
tests/internal/init/: library_init_cuda_test.cpp  library_init_mps_test.mm  library_init_test.cpp
tests/internal/kernel/: cpu_kernel_args_test.cpp  kernel_args_test.cpp  kernel_key_test.cpp  kernel_metadata_test.cpp  kernel_storage_schema_test.cpp  key_resolver_test.cpp  layout_test.cpp  mps_kernel_args_test.mm  param_id_test.cpp  param_test.cpp  variant_test.cpp
tests/internal/kernel/core/: kernel_arg_slots_test.cpp
tests/internal/kernel/cpu/: cpu_kernel_args_test.cpp  cpu_kernel_param_schema_test.cpp
tests/internal/kernel/cuda/: cuda_kernel_session_test.cu
tests/internal/kernel/dispatch/: dispatcher_test.cpp
tests/internal/kernel/mps/: mps_kernel_args_test.mm  mps_kernel_base_manager_test.mm  mps_kernel_base_test.mm  mps_kernel_entry_test.mm  mps_kernel_param_schema_test.mm  mps_kernel_session_ops_test.mm  mps_kernel_session_test.mm
tests/internal/kernel/registry/: kernel_registry_test.cpp  kernel_registry_test.mm
tests/internal/ops/: ops_tables_test.cpp
tests/internal/runtime/: cpu_device_manager_test.cpp  strong_id_test.cpp
tests/internal/runtime/mps/: mps_command_queue_manager_mock_test.mm  mps_command_queue_manager_test.mm  mps_compute_pipeline_state_manager_test.mm  mps_device_manager_test.mm  mps_event_pool_test.mm  mps_fence_pool_test.mm  mps_heap_manager_test.mm  mps_library_manager_test.mm  mps_stream_manager_mock_test.cpp
tests/internal/storage/: storage_test.cpp  typed_storage_manager_test.cpp
tests/internal/storage/cpu/: cpu_storage_test.cpp
tests/internal/storage/manager/: storage_manager_test.cpp
tests/internal/storage/mps/: mps_storage_test.mm
tests/internal/tensor/api/: tensor_api_test.cpp
tests/internal/tensor/manager/: tensor_impl_manager_test.cpp
tests/internal/tensor/registry/: tensor_impl_registry_test.cpp
tests/internal/testing/: error_assert.h
tests/user/execution_context/: cpu_context_guard_test.cpp  cuda_context_guard_test.cu  mps_context_guard_test.mm
tests/user/tensor/: tensor_test.cpp
tools/codegen/: CMakeLists.txt  gen_architectures.cpp  gen_backends.cpp  gen_devices.cpp  gen_dtypes.cpp  gen_executions.cpp  gen_kernel_registry.cpp  gen_operand_ids.cpp  gen_ops.cpp  gen_param_ids.cpp  gen_roles.cpp  gen_storage_ids.cpp  include_resolver.h
(+987 files in other folders)
