set(ORTEAF_SOURCE_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
set(ORTEAF_INCLUDE_ROOT ${ORTEAF_SOURCE_ROOT}/include/orteaf)

set(ORTEAF_USER_INCLUDE_DIR ${ORTEAF_INCLUDE_ROOT}/user)
set(ORTEAF_EXTENSION_INCLUDE_DIR ${ORTEAF_INCLUDE_ROOT}/extension)
set(ORTEAF_INTERNAL_INCLUDE_DIR ${ORTEAF_INCLUDE_ROOT}/internal)

add_library(orteaf_user INTERFACE)
target_include_directories(orteaf_user INTERFACE ${ORTEAF_USER_INCLUDE_DIR})

add_library(orteaf_extension INTERFACE)
target_include_directories(orteaf_extension INTERFACE
    ${ORTEAF_EXTENSION_INCLUDE_DIR}
    ${ORTEAF_USER_INCLUDE_DIR}
)
target_link_libraries(orteaf_extension INTERFACE orteaf_user)
target_compile_definitions(orteaf_extension INTERFACE
    ORTEAF_RUNTIME_STATS_LEVEL=${ORTEAF_RUNTIME_STATS_LEVEL}
    ORTEAF_CPU_STATS_LEVEL=${ORTEAF_CPU_STATS_LEVEL_EFFECTIVE}
    ORTEAF_CUDA_STATS_LEVEL=${ORTEAF_CUDA_STATS_LEVEL_EFFECTIVE}
    ORTEAF_MPS_STATS_LEVEL=${ORTEAF_MPS_STATS_LEVEL_EFFECTIVE}
    ORTEAF_ALLOCATOR_STATS_LEVEL=${ORTEAF_ALLOCATOR_STATS_LEVEL_EFFECTIVE}
    ORTEAF_ENABLE_CPU=${ORTEAF_ENABLE_CPU_INT}
    ORTEAF_ENABLE_CUDA=${ORTEAF_ENABLE_CUDA_INT}
    ORTEAF_ENABLE_MPS=${ORTEAF_ENABLE_MPS_INT}
    ORTEAF_LOG_LEVEL_GLOBAL_VALUE=${ORTEAF_LOG_LEVEL_GLOBAL_VALUE_NUMERIC}
    ORTEAF_LOG_LEVEL_CORE_VALUE=${ORTEAF_LOG_LEVEL_CORE_VALUE_NUMERIC}
    ORTEAF_LOG_LEVEL_TENSOR_VALUE=${ORTEAF_LOG_LEVEL_TENSOR_VALUE_NUMERIC}
    ORTEAF_LOG_LEVEL_CUDA_VALUE=${ORTEAF_LOG_LEVEL_CUDA_VALUE_NUMERIC}
    ORTEAF_LOG_LEVEL_MPS_VALUE=${ORTEAF_LOG_LEVEL_MPS_VALUE_NUMERIC}
    ORTEAF_LOG_LEVEL_IO_VALUE=${ORTEAF_LOG_LEVEL_IO_VALUE_NUMERIC}
)

file(GLOB_RECURSE ORTEAF_SOURCES CONFIGURE_DEPENDS
    ${ORTEAF_SOURCE_ROOT}/src/*.cpp
)

if(ORTEAF_SOURCES)
    add_library(orteaf STATIC ${ORTEAF_SOURCES})
else()
    add_library(orteaf STATIC)
endif()

target_link_libraries(orteaf
    PUBLIC
        orteaf_extension
)

target_include_directories(orteaf
    PRIVATE
        ${ORTEAF_INCLUDE_ROOT}
        ${ORTEAF_SOURCE_ROOT}/include
)
target_compile_definitions(orteaf
    PUBLIC
        ORTEAF_RUNTIME_STATS_LEVEL=${ORTEAF_RUNTIME_STATS_LEVEL}
        ORTEAF_CPU_STATS_LEVEL=${ORTEAF_CPU_STATS_LEVEL_EFFECTIVE}
        ORTEAF_CUDA_STATS_LEVEL=${ORTEAF_CUDA_STATS_LEVEL_EFFECTIVE}
        ORTEAF_MPS_STATS_LEVEL=${ORTEAF_MPS_STATS_LEVEL_EFFECTIVE}
        ORTEAF_ALLOCATOR_STATS_LEVEL=${ORTEAF_ALLOCATOR_STATS_LEVEL_EFFECTIVE}
        ORTEAF_ENABLE_CPU=${ORTEAF_ENABLE_CPU_INT}
        ORTEAF_ENABLE_CUDA=${ORTEAF_ENABLE_CUDA_INT}
        ORTEAF_ENABLE_MPS=${ORTEAF_ENABLE_MPS_INT}
        ORTEAF_LOG_LEVEL_GLOBAL_VALUE=${ORTEAF_LOG_LEVEL_GLOBAL_VALUE_NUMERIC}
        ORTEAF_LOG_LEVEL_CORE_VALUE=${ORTEAF_LOG_LEVEL_CORE_VALUE_NUMERIC}
        ORTEAF_LOG_LEVEL_TENSOR_VALUE=${ORTEAF_LOG_LEVEL_TENSOR_VALUE_NUMERIC}
        ORTEAF_LOG_LEVEL_CUDA_VALUE=${ORTEAF_LOG_LEVEL_CUDA_VALUE_NUMERIC}
        ORTEAF_LOG_LEVEL_MPS_VALUE=${ORTEAF_LOG_LEVEL_MPS_VALUE_NUMERIC}
        ORTEAF_LOG_LEVEL_IO_VALUE=${ORTEAF_LOG_LEVEL_IO_VALUE_NUMERIC}
)

target_compile_features(orteaf PUBLIC cxx_std_20)
